--- a/frontend/clock/index.html
+++ b/frontend/clock/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Lit App</title>
-    <script type="module" src="./punch-app.ts"></script>
+    <title>Vite App</title>
+    <script type="module" src="/src/main.ts"></script>
   </head>
   <body>
-    <punch-app></punch-app>
+    <div id="app"></div>
   </body>
 </html>
